src/v1.7.4/other/videos.md
# 教学视频
<!-- @include: ../other/betweengg.md -->

## **从零精通**
本套课程叫：<span class="red-font">【从零精通: 全流程开发与源码解读】</span>手把手带着从零集成，打造自己的工作流

- 给作者一些支持，一键三连，<span class="red-font">点赞+关注+评论666</span>，这对作者很重要，谢谢🤞

- <span class="red-font">附带RuoYi-Vue-Plus工作流部分的课程</span>

### **课程核心价值**
🚀 你将获得：

- **【从0到1实战】** <span class="red-font">手把手</span>完成<span class="red-font">前后端</span>工作流系统搭建（附完整代码库）
- **【源码级精讲】** 深入Warm-Flow内核，解析流程编排、节点调度等核心模块设计
- **【高效学习路径】** <span class="red-font">先跑通再改造</span>的科学路径：<span class="red-font">60%</span>应用实践 → <span class="red-font">20%</span>源码剖析 → <span class="red-font">20%</span>架构扩展
- **【终身查阅手册】** 按照<span class="red-font">知识点</span>划分课程，随用随查

------

### **课程设计框架**

📚 学习路径全景图

| **阶段**    | **核心内容**                                                                          | **交付成果**                                            |
|-----------|-----------------------------------------------------------------------------------|-----------------------------------------------------|
| **筑基篇**   | 工作流核心<span class="red-font">概念</span>与Warm-Flow<span class="red-font">快速集成</span> | 可运行的流程审批Demo系统                                      |
| **进阶篇**   | <span class="red-font">网关、条件表达式、办理人表达式和监听器</span>等使用                              | 一个<span class="red-font">灵活适应性强</span>调审批系统         |
| **源码篇**   | 各个组件功能源码<span class="red-font">逐行解析</span>，如办理人表达式                                | 掌握网关和动态指定办理人等<span class="red-font">底层逻辑</span> |
| **高阶扩展篇** | 流程设计器、条件和办理人表达式、监听器<span class="red-font">二次开发</span>                             | 支持<span class="red-font">各种各样</span>的需求开发。                                     |


### **课程价格**
> **课程预售中🎉🎉🎉 优惠价: <span class="red-font-bold">399</span>，(视频完结恢复原价) 原价: <span class="red-font-bold">599</span>**

------

### **课程试看**
* [0. 教程导读](https://www.bilibili.com/video/BV1AWRGYEEVr)
* [1. 课程介绍](https://www.bilibili.com/video/BV15yZGYyEy6)
* [2.1. 工作流概念](https://www.bilibili.com/video/BV1tufAY6EVr)
* [2.2. 工作流术语解释](https://www.bilibili.com/video/BV1nGdHY6EAo)
* [3. Warm-Flow介绍](https://www.bilibili.com/video/BV14ufAY6Eyi)
* [4.1. 快速集成](https://www.bilibili.com/video/BV1aQd3YAEEg)
* [8.3. 待办任务列表查询](https://www.bilibili.com/video/BV1JeZGYHEao/?vd_source=1be886ace16159801f6ed0106df215d9)
* [25.1.1. 案例合同签订-需求分析](https://www.bilibili.com/video/BV1WCV8zkEec)
* [25.2.1. 企业采购流程-需求分析](https://www.bilibili.com/video/BV1rCEizeEcT)

------

### **课程目录**
- 已更新到<span class="red-font-bold">105</span>集，预计会有<span class="red-font-bold">110+</span>集，后续有新增功能，还会多
- **总时长**：	28:59:42
- **平均值**：	0:16:34
- **0-10分钟**：	14	个视频，占比 	13.33%
- **10-20分钟**：	68	个视频，占比 	64.76%
- **20-30分钟**：	18	个视频，占比 	17.14%
- **30-40分钟**：	5	个视频，占比 	4.76%

**【从零精通: 全流程开发与源码解读】**：
<div><img src="https://foruda.gitee.com/images/1749628179256149258/f473aef5_2218307.png"></div>

**【RuoYi-Vue-Plus: 工作流视频】**：
<div><img src="https://foruda.gitee.com/images/1749628207116541144/0ff94fdf_2218307.png"></div>

------

### **课程大纲**
- 课程目录不代表视频集数，一章课程里面大多数会有多集视频
- 课程目录可能会微调，请以视频内容为主

<br>

<div><img src="https://foruda.gitee.com/images/1749530969305918407/90c522c0_2218307.png"></div>

------

### **购买方式**
小本生意 用心录制 拒绝砍价 课程预售中持续更新

课程咨询或购买请联系
微信：<span class="red-font-bold">warm-houhou</span>

------

### **购买前常见问题答疑**
> 问题1: 购买后是否有群可以解答问题
> 答: 购买后有专属课程付费群，讲师在线答疑

> 问题2: 是否持续更新 如新版本功能
> 答: 如有新增内容或者调整，会及时更新

> 问题3: 目前视频未全部录制完成 后续更新是否二次收费
> 答: 此为一口价方式，不会再收费

> 问题4: 视频如何下载如何观看
> 答: 视频文件已加密 采用专门的播放器(播放器只限制截图录屏等不限制其他软件使用) 由管理员发放授权码观看
> 支持通过 百度云 或者 阿里云 网盘下载视频资源

> 问题5: 视频平均时长和总时长大概多久
> 答: 视频每集短的大概10分钟以上 长的大概37个分钟左右 平均时长16多分钟每集
> 目前已经录制了105集 预计录制110集以上 按实际目录为准

### **视频用户反馈**
<div><img src="https://foruda.gitee.com/images/1744103124281281440/c4c75237_2218307.png"></div>
<div><img src="https://foruda.gitee.com/images/1744103197805009987/897b32e0_2218307.png"></div>
<div><img src="https://foruda.gitee.com/images/1744103218578523985/590967db_2218307.png"></div>
<div><img src="https://foruda.gitee.com/images/1744103236443767224/92bda156_2218307.png"></div>
<div><img src="https://foruda.gitee.com/images/1744103244889567154/30a112b0_2218307.png"></div>


### **视频套餐**
视频+集中答疑：购买一套视频+一个半小时左右的远程会议答疑，通常公司中使用人多，积累一定数量问题可以统一答疑。
价格：<span class="red-font-bold">1200元</span>
